# seeg

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  appveyor.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.pytest_cache/v/cache/: nodeids
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  seeg.plots.rst  seeg.rst
examples/: show_depths.py
seeg/: __init__.py  epi_index.py  line_length.py  plots.py  seeg.py  source_image.py  utils.py
seeg/plots/: __init__.py  depths.py  draw.py  draw_volume.py  epi_image.py  gin.py  plots.py  source_image.py
src/seeg/: __init__.py  eeg.py  epi_index.py  implantation.py  line_length.py  plan.py  seeg.py  utils.py
src/seeg/plots/: __init__.py  depths.py  display4d.py  draw.py  draw_volume.py  epi_image.py  gin.py  plots.py
tests/: conftest.py  test_depths.py  test_display4d.py  test_draw.py  test_draw_volume.py  test_epi_index.py  test_line_length.py  test_napari.py  test_seeg.py
