[build-system]
requires = ["setuptools>=48", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seeg"
description = "seeg utilities"
version = "0.1.0-dev0"
authors = [
    {name = "Larry Eisenman", email = "leisenman@wustl.edu"}
]
license = {file = "LICENSE"}
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD3 License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]
requires-python = ">=3.8"
dependencies = [
    "mne",
    "nilearn",
    "neo",
    "pyvistaqt"
]

[project.optional-dependencies]
misc = [
    "napari"
]
test = [
    "pytest",
    "pytest-cov"
]

[project.urls]
homepage = "https://github.com/lneisenman/seeg"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rsxXf --cov-report term-missing --cov=seeg"
norecursedirs = [".cache", ".git", ".tox", "build", "*.egg-info"]
testpaths = ["tests"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "seeg.plots.depths",
    "seeg.plots.display4d",
    "seeg.plots.draw_volume",
    "seeg.plots.draw",
    "seeg.plots.epi_image",
    "seeg.plots.plots"
]
disallow_untyped_defs = true
