[project]
name = "seeg"
version = "0.1.0-dev0"
description = "seeg analysis utilities"
readme = "README.md"
authors = [
    { name = "Larry Eisenman", email = "lneisenman@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "darkdetect>=0.8.0",
    "matplotlib>=3.10.1",
    "mne==1.9",
    "neo>=0.14.1",
    "nibabel>=5.3.2",
    "nilearn>=0.11.1",
    "pandas>=2.2.3",
    "pyqt6>=6.9.0",
    "pyvista>=0.44.1",
    "pyvistaqt>=0.11.2",
    "vispy>=0.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[project.urls]
homepage = "https://github.com/lneisenman/seeg"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rsxXf --cov-report term-missing --cov=seeg"
norecursedirs = [".cache", ".git", ".tox", "build", "*.egg-info"]
testpaths = ["tests"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "tests.*.*",
]
disallow_untyped_defs = false
