[metadata]
name = seeg-lneisenman
version = 0.1.0-dev0
author = Larry Eisenman
author_email = leisenman@wustl.edu
description = seeg utilities
long_description = file: README.rst
long_description_content_type = text/rst
url = https://github.com/lneisenman/seeg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD3 License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha'

[options]
package_dir =
    = seeg
packages = find:
python_requires = >=3.8

[options.packages.find]
where = seeg

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
